<resources>
    <string name="app_name">Cook and share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Update</string>
    <string name="update_title">Update Information</string>
    <string name="update_first_name">First name:</string>
    <string name="update_second_name">Second name:</string>
    <string name="update_DOB">Date of Birth:</string>
    <string name="update_sex">Sex:</string>
    <string name="update_email">Email:</string>
    <string name="update_phone_number">Phone:</string>
    <string name="phone_auth_tittle">Enter verify code here</string>
    <string name="phone_auth_remaining">Remaining time:</string>
    <string name="phone_auth_send">Send</string>
    <string name="phone_auth_resend">Resend</string>
    <string name="phone_input_title">Enter your phone number here</string>
    <string name="phone_input_send">send</string>
    <string name="title_activity_post_recipe">PostRecipe</string>
    <string name="card_view_top_post_like">like</string>
    <string name="card_view_top_post_comment">comment</string>
    <string name="by">By</string>
    <string name="duration">Duration: </string>
    <string name="ration">Rations: </string>
    <string name="material">Material: </string>
    <string name="minutes">minutes</string>
    <string name="start_button">START COOKING</string>

    <string-array name="quatity">
        <item>@string/kg</item>
        <item>@string/g</item>
        <item>@string/lb</item>
        <item>@string/ml</item>
        <item>@string/cup</item>
        <item>@string/fruit</item>
        <item>@string/bunchs</item>
    </string-array>
    <string name="fast_easy"><![CDATA[Fast & easy]]></string>
    <string name="kg">kg</string>
    <string name="g">g</string>
    <string name="lb">lb</string>
    <string name="cup">cups</string>
    <string name="teaspoons">teaspoons</string>
    <string name="egg">eggs</string>
    <string name="fruit">fruits</string>
    <string name="bunchs">bunchs</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="search">Search</string>
    <string name="title">Title</string>đề
    <string name="user">People</string>

    <string name="ingredient">Ingredient</string>
    <string name="ml">ml</string>


</resources>
