<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fragment.UpdateProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/update_title"
            android:textColor="#000000"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:text="@string/update_first_name"
                android:textSize="20dp" />

            <EditText
                android:layout_alignParentRight="true"
                android:id="@+id/edt_first_name"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/editext_border"
                android:hint=""
                android:paddingLeft="10dp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="97dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:text="@string/update_email"
                android:textSize="20dp" />

            <EditText
                android:layout_alignParentRight="true"
                android:id="@+id/edt_email"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/editext_border"
                android:hint=""
                android:paddingLeft="10dp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="97dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView

                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="23dp"
                android:text="@string/update_second_name"
                android:textSize="20dp" />

            <EditText
                android:layout_alignParentRight="true"
                android:id="@+id/edt_second_name"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/editext_border"
                android:hint=""
                android:paddingLeft="10dp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="97dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/update_DOB"
                android:textSize="20dp" />
            //date time pick edit later
            <EditText
                android:layout_alignParentRight="true"
                android:id="@+id/edt_date_of_birth"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/editext_border"
                android:hint=""
                android:inputType="datetime"
                android:paddingLeft="10dp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="97dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:text="@string/update_sex"
                android:textSize="20dp" />

            <Spinner
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:id="@+id/drop_down_list"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:background="@drawable/editext_border" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/update_phone_number"
                android:textSize="20dp" />

            <EditText
                android:layout_alignParentRight="true"
                android:id="@+id/edt_phone_number_update"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/editext_border"
                android:hint=""
                android:inputType="datetime"
                android:paddingLeft="10dp"
                tools:layout_editor_absoluteX="126dp"
                tools:layout_editor_absoluteY="97dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="#00E676"
            android:text="@string/update_button"
            android:textAlignment="center"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>