<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    tools:context=".fragment.PostView">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/relativeLayoutPostView"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/img_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image_border" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/relativeLayoutPostView">
            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:hint="Tên món ăn"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:textSize="25dp"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout2"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="by ...."
                    android:textSize="20dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_marginLeft="8dp">
                <RatingBar
                    android:id="@+id/ratingBarSmalloverall"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:isIndicator="false"
                    android:numStars="5" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout7">
            <EditText
                android:id="@+id/edt_recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="description"/>
            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/edt_recipe_description">
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/duration"
                    android:textSize="20dp"
                    android:layout_below="@+id/edt_recipe_description"/>
                <TextView
                    android:id="@+id/tv_time_cook"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_toRightOf="@+id/time"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textSize="20dp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linearLayout8">
                <TextView
                    android:id="@+id/tv_ration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ration"
                    android:textSize="20dp"
                    android:layout_below="@+id/edt_recipe_description"/>
                <TextView
                    android:id="@+id/ration"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_toRightOf="@+id/tv_ration"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout9"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout9"
                    android:text="@string/material"
                    android:layout_marginStart="8dp"
                    android:textSize="20dp"/>
                <EditText
                    android:id="@+id/edt_name_of_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/editext_border"
                    android:layout_marginStart="8dp"/>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#00CCFF"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="18dp"
                    android:text="@string/start_button"/>
            </LinearLayout>
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>